Bug 462688 - double clicking a folder in Kate renames the folder
Summary: double clicking a folder in Kate renames the folder
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: general (other bugs)
Version First Reported In: 22.08.3
Platform: openSUSE Linux
: NOR minor
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-12-06 01:34 UTC by John Andrew McInnes
Modified: 2023-01-02 07:52 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description John Andrew McInnes 2022-12-06 01:34:21 UTC
SUMMARY
KDE Frameworks Version 5.100.0
File->Open Folder double clicking a folder renames the folder instead of opening the folder

STEPS TO REPRODUCE
1. click File->Open Folder...
2. Double click a folder
3. 

OBSERVED RESULT
It wants to rename the folder.

EXPECTED RESULT
The folder should be selected / opened.

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Waqar Ahmed 2022-12-28 07:00:22 UTC
Git commit 814f0b63e8758370d1feba9d6f40f1e73d983f39 by Waqar Ahmed.
Committed on 28/12/2022 at 07:00.
Pushed by waqar into branch 'master'.

Open Folder: set QFileDialog::ReadOnly

M  +4    -1    addons/project/kateprojectpluginview.cpp

https://invent.kde.org/utilities/kate/commit/814f0b63e8758370d1feba9d6f40f1e73d983f39
Comment 2 Waqar Ahmed 2023-01-02 07:52:19 UTC
Git commit ee9fba653653804842fc0d10b77f380026d2d8b5 by Waqar Ahmed.
Committed on 02/01/2023 at 07:51.
Pushed by waqar into branch 'release/22.12'.

Open Folder: set QFileDialog::ReadOnly
(cherry picked from commit 814f0b63e8758370d1feba9d6f40f1e73d983f39)

M  +4    -1    addons/project/kateprojectpluginview.cpp

https://invent.kde.org/utilities/kate/commit/ee9fba653653804842fc0d10b77f380026d2d8b5