Open Folder: set QFileDialog::ReadOnly

BUG: 462688
(cherry picked from commit 814f0b63e8758370d1feba9d6f40f1e73d983f39)